[metadata]
name = ingredients.db
author = Ryan Belgrave
author-email = rmb1993@gmail.com
summary = Database Library for Sandwich Cloud
description-file = README.md
home-page = https://github.com/sandwichcloud/ingredients.db
license = MIT
classifier =
    Development Status :: 3 - Alpha
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Database :: Front-Ends
    Topic :: Software Development :: Libraries :: Python Modules

[files]
packages =
    ingredients_db

[pbr]
skip_authors = 1
skip_changelog = 1